--- a/public/index.html
+++ b/public/index.html
@@ -193,15 +193,12 @@
                         <div class="about-caption">
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle3 mb-35 ">
-                                <span class="">About Our company</span>
-                                <h2 class="">52 Years Of Experience In Hair cut!</h2>
+                                <span class="">Welcome to Focus Hair Studio</span>
+                                <h2 class="">Many Years Of Professional Experience</h2>
                             </div>
-                            <p class="mb-30 pera-bottom">Brook presents your services with flexible, convenient and
-                                cdpoe layouts. You can select your favorite layouts & elements for cular ts with
-                                unlimited ustomization possibilities. Pixel-perfreplication of the designers is
-                                intended.</p>
-                            <p class="pera-top mb-50">Brook presents your services with flexible, convefnient and ent
-                                anipurpose layouts. You can select your favorite.</p>
+                            <p class="mb-30 pera-bottom">Where style meets precision. We're not just about hair; we're about bringing your confidence into focus. Whether you're looking for a bold new look, a flawless fade, or a relaxing hair spa, our skilled stylists are here to make you look and feel your absolute best.</p>
+                            <p class="pera-top mb-50">At Focu, we believe every strand matters. With a modern vibe, premium products, and personalized service, we’re redefining the salon experience — one cut, one color, one client at a time.</p>
+                            <h3>Step in, switch up your style, and step out with focus.</h3>
                             <!-- <img src="assets/img/gallery/signature.png" alt=""> -->
                         </div>
                     </div>
