--- a/public/maniPadi.html
+++ b/public/maniPadi.html
@@ -127,6 +127,8 @@
         // Close Appointment Modal
         function closeModal() {
             document.getElementById("appointmentModal").classList.add("hidden");
+            document.getElementById("gotohome").classList.remove("hidden");
+            document.getElementById("book").classList.remove("hidden");
         }
 
         // Close Confirmation Modal
